--- a/app/index.html
+++ b/app/index.html
@@ -28,9 +28,10 @@
     <link rel="stylesheet" href="css/index.css" />
     <link rel="icon" type="image/svg+xml" href="assets/favicon.svg" />
     <link rel="icon" type="image/png" href="/assets/favicon.png" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
-  <body>
-    <header class="header">
+  <body class="body">
+    <header class="header fadeTo">
       <h1 class="header__h1">World Countries</h1>
       <div class="theme__btn-container">
         <button class="btn-toggle"></button>
@@ -57,7 +58,7 @@
         </ul>
       </nav>
     </header>
-    <main class="main">
+    <main class="main fadeTo">
       <section class="main__section">
         <div class="main__section-card">
           <img class="loader-img" src="./assets/loader.svg" alt="loader-icon" />
@@ -65,7 +66,7 @@
         <button id="rand" class="action-btn">Next Random Country</button>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer fadeTo">
       <p>Giorgi Balakhadze</p>
       <p><span class="footer__copy-left">&copy;</span> Copyleft 2022</p>
     </footer>
