--- a/app/pages/profile.html
+++ b/app/pages/profile.html
@@ -23,9 +23,10 @@
     <link rel="stylesheet" href="../css/profile.css" />
     <link rel="icon" type="image/svg+xml" href="assets/favicon.svg" />
     <link rel="icon" type="image/png" href="/assets/favicon.png" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
   <body>
-    <header class="header">
+    <header class="header fadeTo">
       <h1 class="header__h1">Country Profile</h1>
       <div class="theme__btn-container">
         <button class="btn-toggle"></button>
@@ -50,7 +51,7 @@
         </ul>
       </nav>
     </header>
-    <main class="main">
+    <main class="main fadeTo">
       <section class="main__navigation">
         <button
           class="main__section-go-back-btn navigation__btn"
@@ -106,7 +107,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer fadeTo">
       <p>Giorgi Balakhadze</p>
       <p><span class="footer__copy-left">&copy;</span> Copyleft 2022</p>
     </footer>
